erDiagram
  CLASSIFICATIONS ||--o{ LEADS : has
  LEAD_STATUSES  ||--o{ LEADS : has
  DEMO_STATUSES  ||--o{ LEADS : has
  PRIORITIES     ||--o{ LEADS : has
  LISTING_RANGE_BUCKETS ||--o{ LEADS : has
  SOURCES        ||--o{ LEADS : has
  VPMS           ||--o{ LEADS : assigned

  LEADS          ||--o{ LEAD_LIST_MEMBERSHIPS : member_of
  LISTS          ||--o{ LEAD_LIST_MEMBERSHIPS : contains

  LEADS          ||--o{ LISTINGS : owns
  LISTINGS       ||--o{ LISTING_PUBLICATIONS : has

  LEADS          ||--o{ AUDITS : created
  LISTINGS       ||--o{ AUDITS : relates_to

  CLASSIFICATIONS {
    string id
    string slug
    string name
  }

  LEAD_STATUSES {
    string id
    string slug
    string name
  }

  DEMO_STATUSES {
    string id
    string slug
    string name
  }

  SOURCES {
    string id
    string slug
    string name
  }

  PRIORITIES {
    string id
    string slug
    string name
  }

  LISTS {
    string id
    string slug
    string name
  }

  LISTING_RANGE_BUCKETS {
    string id
    string slug
    string name
    int    min_count
    int    max_count
  }

  VPMS {
    string id
    string name
    string email
    date   created_at
    date   updated_at
  }

  LEADS {
    string id
    date   created_at
    date   updated_at
    string name
    string email
    string phone
    string location
    string classification_id
    string lead_status_id
    string demo_status_id
    string priority_id
    string range_bucket_id
    int    actual_listings
    string source_id
    string source_url
    string assigned_vpm_id
  }

  LEAD_LIST_MEMBERSHIPS {
    string lead_id
    string list_id
    date   joined_at
  }

  LISTINGS {
    string id
    date   created_at
    date   updated_at
    string lead_id
    string title
    string description
  }

  LISTING_PUBLICATIONS {
    string id
    date   created_at
    string listing_id
    string platform
    string url
  }

  AUDITS {
    string id
    date   created_at
    string lead_id
    string listing_id
    string listing_url
    string listing_title
    float  overall_score
    string submission_id
  }
